issue1084 - fix asset image overflow

--- a/app/assets/sass/dri/dri.scss
+++ b/app/assets/sass/dri/dri.scss
@@ -2314,6 +2314,7 @@ h2.dri_no_asset_availiable {
   max-width: 400px;
   max-height: 300px;
   display: block;
+  overflow: hidden;
   .carousel-control {
     background: none;
     border: none;
